Added the content of Navigation.tsx component, including styling it. Then I added a Pages directory to keep a pages of the website, and I added a page component called Authentication.tsx which is for both signup and ogin and I then created the Form folder in components,and the component Form.tsx in it to handle signup and signin data.

--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,5 @@ body {
   margin: 0 2rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fff;
 }
