--- a/src/components/layout/styles/navigation.module.css
+++ b/src/components/layout/styles/navigation.module.css
@@ -1,19 +1,3 @@
-/* Header */
-/* .header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: var(--header-height);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 2rem;
-  background-color: var(--accent-color);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-  transition: background-color 0.3s ease;
-} */
-
 .navigation_header {
   width: 100%;
   display: flex;
@@ -21,12 +5,12 @@
   justify-content: space-between;
   background-color: #fff;
   padding: 2rem 4.5rem;
-  border-radius: 6px;
   box-shadow: 11px 33px 27px -18px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   position: fixed;
   top: 0;
   box-sizing: border-box;
+  max-height: 6rem;
 }
 
 .navigation_header.scrolled {
@@ -40,11 +24,19 @@
 
 .navigation_header a {
   color: #4b4b4b;
+  text-decoration: none;
+  
 }
 
 .navigation_header div p a {
   text-decoration: none;
 }
+
+
+.navigation_header a.has_scrolled {
+  color: #2e2e2e;
+}
+
 
 .navigation_header .right_nav_container {
   display: flex;
@@ -54,7 +46,7 @@
   padding: 1rem 0;
 }
 
-.navigation_header ul {
+.navigation_header .right_nav_container ul {
   list-style: none;
   display: flex;
   justify-content: space-around;
@@ -63,9 +55,7 @@
   border-radius: 5px;
 }
 
-.navigation_header a {
-  text-decoration: none;
-}
+
 
 .navigation_header ul li a {
   border-radius: 6px;
@@ -89,12 +79,17 @@
   font-weight: 600;
 }
 
+.navigation_header .sign_in_container a.user_scrolled {
+background-color: #f5f1f1;
+color: #2e2e2e;
+}
+
 .navigation_header .sign_in_container a:hover {
   opacity: 0.8;
 }
 
+
 .active_tab {
-  padding: 1rem 2rem;
-  background-color: #fff;
   opacity: 0.7;
-}
+  box-shadow: 8px 28px 20px -3px rgba(0, 0, 0, 0.1);
+} 
