--- a/src/components/Form/styles/form.module.css
+++ b/src/components/Form/styles/form.module.css
@@ -1,10 +1,13 @@
 .form_container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 2rem;
-  padding: 1rem;
-  width: 36rem;
+  padding: 4rem 2rem 7rem 2rem;
+  width: 32rem;
   border-radius: 4px;
+  background-color: #fff;
+  box-shadow: 3px 3px 3px 4px #e7e7e7;
 }
 
 .form_container h1 {
@@ -14,7 +17,7 @@
 .inputs_container {
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
+  gap: 1.5rem;
 }
 
 .inputs_container p {
@@ -104,4 +107,18 @@
 .recover_details span:nth-child(3):hover {
   cursor: pointer;
   opacity: 0.9;
+}
+
+@media screen and (max-width: 768px) {
+  .form_container {
+    max-width: 28rem;
+    padding: 4rem 1rem 7rem 1rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .form_container {
+    max-width: 22rem;
+    padding: 4rem 1rem 7rem 1rem;
+  }
 }
