--- a/src/pages/styles/home.module.css
+++ b/src/pages/styles/home.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
   height: calc(100vh - var(--header-height));
   text-align: center;
   padding: 0 2rem;
@@ -28,6 +29,7 @@
 .hero p {
   font-size: 1.25rem;
   margin: 0.5rem 0 2rem;
+  color: #ffffff;
 }
 
 .cta_button {
@@ -52,6 +54,9 @@
 
 /* Introduction Section */
 .introduction {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   padding: 4rem 2rem;
   text-align: center;
 }
@@ -61,20 +66,27 @@
   font-optical-sizing: auto;
   font-weight: 1000;
   font-size: 2rem;
- 
 }
 
 .features {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  gap: 1.5rem;
 }
 
 .feature {
-  width: 30%;
-  text-align: center;
-  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   animation: fadeInUp 1s ease-out;
+  background-color: var(--accent-color);
+  max-width: 28rem;
+
+  padding: 2rem 1rem;
+  border-radius: 8px;
 }
 
 .feature h3 {
